--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <div class="header__subtitle" >фрилансер веб-разработчик html,css,js</div>
      <div class="header__arrow">
        <a href="#portfolio">
-         <img src="/chevron-down.svg" alt="..">
+         <img src="chevron-down.svg" alt="..">
        </a>
      </div>
     </header>
